# ijs_live_team_totals

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
src/excel/: xlsx_writer.rs
src/html/: html_writer.rs  parser.rs
src/html_utilities/: parser.rs  results_sorter.rs
src/io/: file_utils.rs  mod.rs
src/io/excel/: mod.rs  scoring_system_reader.rs  xlsx_writer.rs
src/io/html/: club_points.rs  event.rs  html_writer.rs  mod.rs  parser.rs  points_system.rs  result_set.rs  results_sorter.rs  scoring_system.rs
src/settings/: settings.rs
src/ui/: event_checkbox.rs  gui.rs  image_loader.rs  mod.rs  points_field.rs  terminal_ui.rs  text_field.rs  timer.rs
