[package]
authors = ["Collin Ogren"]
name = "auto_team_totals"
version = "0.6.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.23.1"
toml = "0.8.23"
serde = "1.0.219"
serde_derive = "1.0.219"
text_io = "0.1.13"
rust_xlsxwriter = "0.88.0"
iced = { version = "0.13.1", features = ["image"] }
iced_futures = "0.13.2"
async-std = "1.13.1"
async-channel = "2.3.1"
native-dialog = "0.9.0"
human-sort = "0.2.2"
once_cell = "1.21.3"
png = "0.17.16"
directories = "6.0.0"
open = "5.3.2"
reqwest = "0.12.20"
indexmap = "2.9.0"
rust_decimal = "1.37.1"
calamine = "0.31.0"

[build-dependencies]
winres = "0.1.12"